Fixed invisible ring in header panel

--- a/web/css/theme/layout/_header.less
+++ b/web/css/theme/layout/_header.less
@@ -20,3 +20,12 @@
         }
     }
 }
+
+& when not (@critical) {
+    .page-header {
+        .panel.wrapper {
+            --ring-color: @rgb-white;
+            --ring-alpha: .8;
+        }
+    }
+}
